# Simplify

./: .env  .gitignore  lint-check.sh  pyproject.toml  submission.md  test.db
.github/workflows/: run-lint.yml  run-test-caes.yml  run-test-cases.yml
takehome/: app.py  authy.py  cache.py  config.py  constants.py  logs.py  models.py  utils.py
takehome/repository/: database.py  database_models.py  database_utils.py
tests/: test_app.py  test_helper.py
